# Paradigmas_2018.1

./: .gitignore  LICENSE  README.md  abstractData.hs  file.hs  heap.hs  huffman.hs  main.hs
binary_tree/: main.hs  tree.hs
huffman2.0/: file.hs  huffman.hs  main.hs  teste.txt
huffman2.0/src/: Main.hs  out.txt
huffman_code/: README.md  abstractData.hs  file.hs  heap.hs  huffman.hs  main.hs
trabalho01/huffman2.0/: README.md  huffman.cabal
trabalho01/huffman2.0/src/: BenchMark.hs  File.hs  Main.hs
trabalho02/: champs.csv  definitionsOfRecommendations.pl  knowledge.pl  lol.pl  lolGame.pl  main.pl
trabalho02/knowledgeBase/: .~lock.participants.csv#
trabalho03/: .classpath  APDescription.txt  MTPs-Main-Container.txt
trabalho03/src/agents/: AgentCompanion.java  AgentStudent.java  AgentTeacher.java
trabalho03/src/behaviour/: BehaviourAccompanyStudent.java  BehaviourMessage.java  BehaviourReceiverMessage.java  BehaviourSuggestStudyMaterial.java
trabalho03/src/behaviours/: CheckStudentProgressBehaviour.java  CreateCompanionBehaviour.java  MeetAllCompanionsBehaviour.java  SendMessageBehaviour.java
trabalho03/src/communication/: BehaviourMeetAllCompanions.java  BehaviourMessage.java  BehaviourReceiverMessage.java  BehaviourReplyMessage.java  BehaviourSendMessage.java
trabalho03/src/utils/: Evaluation.java  Run.java  UtilsEvaluation.java
